# csc-299-project

./: .gitignore  README.md  globals.css  mobile-setup.md  next.config.js
app/: globals.css  layout.tsx  page.tsx
app/api/humanize/: route.ts
public/: sw.js
tasks1/: README.md  task_manager.py
tasks2/: README.md  task_manager.py  test_task_manager.py
tasks3/: README.md  pyproject.toml
tasks3/src/tasks3/: __init__.py  task_manager.py
tasks3/tests/: test_inc.py  test_task_manager.py
tasks4/: README.md  pyproject.toml
tasks4/src/tasks4/: __init__.py
