[project]
name = "tasks4"
version = "0.1.0"
description = "AI-powered task summarization using OpenAI Chat Completions API"
readme = "README.md"
authors = [
    { name = "myaqoobi", email = "your-email@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.7.1",
]

[project.scripts]
tasks4 = "tasks4:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
